--- a/src/Prototype.css
+++ b/src/Prototype.css
@@ -1,10 +1,25 @@
 body{
 	background-color: #202316;
 }
+
+button{
+	float: left;
+}
+
+
 #stage{
+	float: left;
 	margin-left: auto;
 	margin-right: auto;
 	width: 860px;
 	height: 560px;
 	border: 2px solid #76D541;
+}
+#stats{
+	float: right;
+	margin-left: auto;
+	margin-right: auto;
+	width: 320px;
+	height: 560px;
+	border: 2px solid #000000;
 }
