--- a/src/Prototype.css
+++ b/src/Prototype.css
@@ -1,10 +1,9 @@
 body{
 	background-color: #202316;
+	
 }
 #stage{
-	float: left;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
 	width: 860px;
 	height: 560px;
 	border: 2px solid #76D541;
